--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</tr>
 		<tr align="center">
 			<td>2019 - 2020</td>
-			<td>Head Department in Macoy Enterprises/td>
+			<td>Head Department in Macoy Enterprises</td>
 			<td>Macoy Enterpise</td>
 		</tr>
 
